@@ -1,5 +1,7 @@
 0.3.5.25
   - (zathor) [MKVMuxer] changed log output language to English
+  - (zathor) [x264] added option to disable the 64 bit mode of x264
+  - (zathor) [x264] in case of a problem with the 64 bit mode of x264 it will be disabled (and not automatically enabled again)
 
 0.3.5.24
   - (zathor) removed "AviSynth is not installed" message if the avisynth.dll does not have a version number 
